# jetbot

./: .gitignore  OPTIMIZATION_SUMMARY.md  RPLIDAR_INTEGRATION.md  caculator.py  check_lidar_follower_deps.py  config.txt  fasttest.py  fix_lidar_follower.sh  install_dependencies.py  jetbot_lidar_collision_avoidance.py  line_following_cv.py  line_following_simple.py  map.json  map_navigator.py  mock_camera_publisher.py  mock_yolo.py  opposite_detector.py  optimized_config.txt  pyproject.toml  ros_lidar_collision_avoidance.py  ros_lidar_follower.py  ros_lidar_follower_fixed.py  rule_config.json  setup_jetbot_lidar.py  show_camera_debug.py  simple_lidar_follower.py  simple_rule_based_robot.py  simple_rule_based_robot_main.py  test_lidar_setup.sh  test_ros_motors.py  test_simple_lidar_follower.py
jetbot/: __init__.py  lidar.py
launch/: jetbot_lidar_visualization.launch  jetbot_rplidar_a1.launch  jetbot_rplidar_a3.launch
models/: README.md
notebooks/road_following/: line_following_camera_only.ipynb  train_model.ipynb
rviz/: jetbot_lidar.rviz
